# alive-intelligence-exponential-alpha

./: .gitmodules  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vitest.config.ts
.github/workflows/: cron.yml
drizzle/: 0000_known_goblin_queen.sql  0001_motionless_sheva_callister.sql  0002_voice_enrichment.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
public/execution/: audio-processor.js  index.html
scripts/: seed-openclaw-files.ts
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/(app)/: layout.tsx
src/components/: mind-provider.tsx
src/core/: cognitive-loop.ts  constants.ts  embeddings.ts  engine-status.ts  engine.test.ts  engine.ts  signal-bus.test.ts  signal-bus.ts  signal-forwarder.ts  signal-payloads.ts  state.test.ts  thought-bridge.ts  types.ts  working-memory.test.ts  working-memory.ts
src/db/: schema.ts
src/hooks/: use-speech-to-text.ts
src/lib/: anthropic.ts  api-handler.ts  claude.ts  cognitive-middleware.ts  encryption.ts  indexed-db.ts  openclaw-auth.ts  openclaw-bridge.ts  openclaw-cron-bridge.ts  openclaw-errors.ts  openclaw-event-emitter.ts  openclaw-events.ts  openclaw-hook-bridge.ts  openclaw-rpc.ts  openclaw-skill-bridge.ts  openclaw-tool-bridge.ts  schemas.ts  tracked-anthropic.ts
src/skills/: summarize.yml  translate.yml
voice/: .gitignore  config.yaml  pyproject.toml
voice/src/: config.py  main.py  server.py
voice/src/pipeline/: claude_client.py  openclaw.py  sentence_splitter.py  smart_turn.py  state_machine.py  transcriber.py  vad.py
(+159 files in other folders)
